@@ -95,8 +95,12 @@ int32_t SPVM__Net__SSLeay__connect(SPVM_ENV* env, SPVM_VALUE* stack) {
     
     char ssl_error_string[256] = {0};
     ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-    env->die(env, stack, "[System Error]SSL_connect failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "SSL_connect failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    return error_id;
   }
   
   return 0;
@@ -124,8 +128,13 @@ int32_t SPVM__Net__SSLeay__accept(SPVM_ENV* env, SPVM_VALUE* stack) {
     
     char ssl_error_string[256] = {0};
     ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-    env->die(env, stack, "[System Error]SSL_accept failed.", __func__, FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "SSL_accept failed.", __func__, FILE_NAME, __LINE__);
+    
+    return error_id;
   }
   
   return 0;
@@ -154,8 +163,12 @@ int32_t SPVM__Net__SSLeay__shutdown(SPVM_ENV* env, SPVM_VALUE* stack) {
     
     char ssl_error_string[256] = {0};
     ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-    env->die(env, stack, "[System Error]SSL_shutdown failed.", __func__, FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "SSL_shutdown failed.", __func__, FILE_NAME, __LINE__);
+    return error_id;
   }
   
   stack[0].ival = status;
@@ -182,8 +195,12 @@ int32_t SPVM__Net__SSLeay__set_fd(SPVM_ENV* env, SPVM_VALUE* stack) {
     
     char ssl_error_string[256] = {0};
     ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-    env->die(env, stack, "[System Error]SSL_set_fd failed.", __func__, FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "SSL_set_fd failed.", __func__, FILE_NAME, __LINE__);
+    return error_id;
   }
   
   return 0;
@@ -214,8 +231,12 @@ int32_t SPVM__Net__SSLeay__set_tlsext_host_name(SPVM_ENV* env, SPVM_VALUE* stack
     
     char ssl_error_string[256] = {0};
     ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-    env->die(env, stack, "[System Error]SSL_set_tlsext_host_name failed.", __func__, FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "SSL_set_tlsext_host_name failed.", __func__, FILE_NAME, __LINE__);
+    return error_id;
   }
   
   return 0;
@@ -269,7 +290,12 @@ int32_t SPVM__Net__SSLeay__read(SPVM_ENV* env, SPVM_VALUE* stack) {
       
       char ssl_error_string[256] = {0};
       ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-      env->die(env, stack, "[System Error]SSL_read failed.", __func__, FILE_NAME, __LINE__);
+      
+      int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+      if (error_id) { return error_id; }
+      
+      env->die(env, stack, "SSL_read failed.", __func__, FILE_NAME, __LINE__);
+      return error_id;
     }
   }
   
@@ -326,7 +352,12 @@ int32_t SPVM__Net__SSLeay__peek(SPVM_ENV* env, SPVM_VALUE* stack) {
       
       char ssl_error_string[256] = {0};
       ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-      env->die(env, stack, "[System Error]SSL_peek failed.", __func__, FILE_NAME, __LINE__);
+      
+      int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+      if (error_id) { return error_id; }
+      
+      env->die(env, stack, "SSL_peek failed.", __func__, FILE_NAME, __LINE__);
+      return error_id;
     }
   }
   
@@ -383,7 +414,12 @@ int32_t SPVM__Net__SSLeay__write(SPVM_ENV* env, SPVM_VALUE* stack) {
       
       char ssl_error_string[256] = {0};
       ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-      env->die(env, stack, "[System Error]SSL_write failed.", __func__, FILE_NAME, __LINE__);
+      
+      int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+      if (error_id) { return error_id; }
+      
+      env->die(env, stack, "SSL_write failed.", __func__, FILE_NAME, __LINE__);
+      return error_id;
     }
   }
   
