@@ -66,7 +66,11 @@ int32_t SPVM__Net__SSLeay__BIO__read(SPVM_ENV* env, SPVM_VALUE* stack) {
   int32_t read_length = BIO_read(bio, data, dlen);
   
   if (read_length < 0) {
-    return env->die(env, stack, "BIO_read failed.", __func__, FILE_NAME, __LINE__);
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "BIO_read failed.", __func__, FILE_NAME, __LINE__);
+    return error_id;
   }
   
   stack[0].ival = read_length;
