@@ -100,16 +100,6 @@ class TestCase::Net::SSLeay {
     
     my $shutdown_ret = $ssl->shutdown;
     
-    if ($shutdown_ret == 0) {
-      while (1) {
-        my $recv_buffer = (mutable string)new_string_len 100;
-        my $read_length = $ssl->read($recv_buffer);
-        if ($read_length <= 0) {
-          last;
-        }
-      }
-    }
-    
     $socket->close;
     
     unless (Fn->contains($buffer->to_string, "google.com")) {
